# langsmith-first

./: pyproject.toml  settings.py
langsmith_first/: main.py  quick.py
